2022-10-05T08:23:23Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3188334502
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 275 732 / 281 748
* notice: next accum: outdated-unq outdated-all / unq all: 275 732 / 280 745
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -3 / +2 +4 -1 -3 / 1 1
* notice: removed / changed dates: [] / [2022-09-21]

2022-10-04T16:28:57Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3183818483
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 274 731 / 281 748
* notice: next accum: outdated-unq outdated-all / unq all: 275 732 / 281 748
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-20] / []

2022-10-03T16:31:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3175812296
* notice: last 14d: unq all: 7 17
* notice: prev accum: outdated-unq outdated-all / unq all: 273 725 / 280 747
* notice: next accum: outdated-unq outdated-all / unq all: 274 731 / 281 748
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-19] / [2022-10-03]

2022-10-02T01:53:37Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3166943542
* notice: last 14d: unq all: 7 22
* notice: prev accum: outdated-unq outdated-all / unq all: 272 723 / 280 746
* notice: next accum: outdated-unq outdated-all / unq all: 273 725 / 280 747
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-17] / []

2022-10-01T08:23:31Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3163815702
* notice: last 14d: unq all: 8 23