@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-05T08:23:23Z",
+  "timestamp" : "2022-10-05T16:45:10Z",
   "count_outdated" : 732,
   "uniques_outdated" : 275,
-  "count" : 745,
-  "uniques" : 280,
+  "count" : 752,
+  "uniques" : 281,
   "views" : [
     {
       "timestamp": "2022-09-21T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-05T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
