@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 5,
+  "count": 20,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2022-09-21T00:00:00Z",
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-10-03T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-05T00:00:00Z",
+      "count": 7,
       "uniques": 1
     }
   ]
