@@ -1,3 +1,11 @@
+2022-10-05T16:45:10Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3191090155
+* notice: last 14d: unq all: 6 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 275 732 / 280 745
+* notice: next accum: outdated-unq outdated-all / unq all: 275 732 / 281 752
+* notice: prev exec diff / last date diff / accum: unq all: +1 +7 -0 -0 / +1 +7 -0 -0 / 1 7
+* notice: removed / changed dates: [] / [2022-10-05]
+
 2022-10-05T08:23:23Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3188334502
 * notice: last 14d: unq all: 5 13
